# delta

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
benchmarks/: PERFORMANCE.md  bench_subtract.py  compare_gaussianity.py  compare_hotpants.py  diag_real_data.py  diag_stellar_residuals.py  knot_budget_probe.py  knot_recovery_sweep.py  profile_select_stamps.py  validate_stamped_solve.py  visualize_hotpants.py
docs/: SPEC.md  USAGE.md  cli.md  index.md  performance.md  spec.md  usage.md
docs/api/: catalog.md  core.md  index.md  inputs.md  pipeline.md  solution.md  validation.md
include/delta/: basis.hpp  catalog.hpp  convolve.hpp  detect.hpp  fit.hpp  image.hpp  io.hpp  noise.hpp  solve.hpp  spatial.hpp  subtract.hpp  timing.hpp  version.hpp
python/delta/: __init__.py  _core.pyi  _inputs.py  _log.py  _provenance.py  catalog.py  cli.py  pipeline.py  solution.py  validation.py
src/: basis.cpp  bindings.cpp  catalog.cpp  convolve.cpp  detect.cpp  fit.cpp  io.cpp  noise.cpp  solve.cpp  spatial.cpp  subtract.cpp  timing.cpp
tests/: conftest.py  test_basis.py  test_catalog.py  test_cli.py  test_convolve.py  test_detect.py  test_fit.py  test_hotpants.py  test_injection_recovery.py  test_inputs.py  test_integration.py  test_io.py  test_noise.py  test_pipeline.py  test_provenance.py  test_smoke.py  test_solve.py  test_spatial.py  test_subtract.py
