[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "delta"
version = "1.1.1"
description = "High-performance astronomical difference imaging (modern Alard & Lupton)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tom Killestein", email = "thomas.killestein@gmail.com" }]
dependencies = ["numpy>=1.23", "loguru>=0.7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
astropy = ["astropy>=5"]
cli = ["typer>=0.12", "rich>=13"]
benchmarks = ["astropy>=5", "matplotlib>=3.6"]

[project.scripts]
delta = "delta.cli:run"

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "astropy>=5",
    "pillow>=10",
    "matplotlib>=3.6",
    "typer>=0.12",
    "rich>=13",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "griffe>=1.0",
    "ruff>=0.6",            # mkdocstrings uses it to format rendered signatures
]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/delta"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.10"
root = ["python"]
extra-paths = ["."]
